# crm_bot

./: .gitignore  bot.py  create_bot.py  index.py  main_logic.py  pyproject.toml  render_docx.py  requirements.txt  yadiskapi.py
docs_tamplates/: E&V privet.docx  E&V3.docx
handlers/: init.py  other.py  photographer.py
keyboards/: __init__.py  photographer_kb.py
models/: __init__.py  models.py  models_test.py
