[tool.poetry]
name = "crm_bot"
version = "0.1.0"
description = ""
authors = ["stepan-martynov <smartd88@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
aiogram = "^2.18"
pydantic = "^1.9.0"
yadisk = "^1.2.15"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
